# poc-python

./: alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/versions/: 1e5fc415e81b_create_items_table.py  aa0fb4724be6_create_users_table.py
app/: api.py  deps.py
app/endpoints/: items.py  users.py
sql_app/: crud.py  database.py  models.py  schemas.py
